# dupefind

./: LICENSE  README.md  deleter.py  pyproject.toml  scanner.py  test_scanner.py
dupefind/: __init__.py  cli.py  reporter.py
