[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dupefind"
version = "1.0.0"
description = "A fast duplicate file finder for Linux"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["duplicate", "files", "disk", "cli", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = []   # zero runtime dependencies — stdlib only

[project.scripts]
dupefind = "dupefind.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/dupefind"
Issues   = "https://github.com/yourname/dupefind/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dupefind*"]
